create github pages

--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
 
     
 
@@ -162,7 +162,7 @@
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5"><em>
-                    "Responsible 100 has a compelling offer to businesses seeking to better understand the most important social and environmental issues, and what practices to stop, add, or modify, in order to improve perfromance. The ultimate test will be delivering their services profitabilitym and at scale, and I'll bet on them achieving this, and having extraordinary impact on the world."</em><em><br></em><strong>Head of Sustainability EMEA and Partner, KPMG</strong></div>
+                    "Responsible 100 has a compelling offer to businesses seeking to better understand the most important social and environmental issues, and what practices to stop, add, or modify, in order to improve performance. The ultimate test will be delivering their services profitability and at scale, and I'll bet on them achieving success and having extraordinary impact on the world."</em><em><br></em><strong>Head of Sustainability EMEA and Partner, KPMG</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
