create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -186,7 +186,7 @@
     </div>
 </section>
 
-<section class="cid-s24tb5o7Jx" id="footer1-38">
+<section class="cid-s2KNur0wy6" id="footer1-4d">
 
     
 
@@ -205,7 +205,7 @@
                 <h5 class="pb-3">
                     Address
                 </h5>
-                <p class="mbr-text">Unit 102, Galway House<br>Radnor Street<br>London<br>EC1V 3SN</p>
+                <p class="mbr-text">Unit 102, Galway House<br>Radnor Street,&nbsp;London<br>EC1V 3SN</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
@@ -218,7 +218,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     About Responsible 100</h5>
-                <p class="mbr-text"><a class="text-primary" href="page6.html">Our Purpose</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
+                <p class="mbr-text"><a class="text-primary" href="page8.html">What is Responsible 100?</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
             </div>
         </div>
         <div class="footer-lower">
