--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section class="header1 cid-s1vhiCq0ke mbr-parallax-background" id="header1-t">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header1 cid-s1vhiCq0ke mbr-parallax-background" id="header1-t">
 
     
 
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<section class="cid-s24tOQheH0" id="footer1-3c">
+<section class="cid-s2KNT3NP5J" id="footer1-4h">
 
     
 
@@ -146,7 +146,7 @@
                 <h5 class="pb-3">
                     Address
                 </h5>
-                <p class="mbr-text">Unit 102, Galway House<br>Radnor Street<br>London<br>EC1V 3SN</p>
+                <p class="mbr-text">Unit 102, Galway House<br>Radnor Street,&nbsp;London<br>EC1V 3SN</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
@@ -159,7 +159,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     About Responsible 100</h5>
-                <p class="mbr-text"><a class="text-primary" href="page6.html">Our Purpose</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
+                <p class="mbr-text"><a class="text-primary" href="page8.html">What is Responsible 100?</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
             </div>
         </div>
         <div class="footer-lower">
