--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
 
     
 
@@ -260,7 +260,7 @@
     </div>
 </section>
 
-<section class="cid-s23QkBUjQH" id="footer1-36">
+<section class="cid-s2KNYtk9jA" id="footer1-4i">
 
     
 
@@ -279,7 +279,7 @@
                 <h5 class="pb-3">
                     Address
                 </h5>
-                <p class="mbr-text">Unit 102, Galway House<br>Radnor Street<br>London<br>EC1V 3SN</p>
+                <p class="mbr-text">Unit 102, Galway House<br>Radnor Street,&nbsp;London<br>EC1V 3SN</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
@@ -292,7 +292,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     About Responsible 100</h5>
-                <p class="mbr-text"><a class="text-primary" href="page6.html">Our Purpose</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
+                <p class="mbr-text"><a class="text-primary" href="page8.html">What is Responsible 100?</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
             </div>
         </div>
         <div class="footer-lower">
