create github pages

--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
 
     
 
