create github pages

--- a/page5.html
+++ b/page5.html
@@ -53,7 +53,7 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com"><br></a>
                 </li>
-                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false">What is R100?<br></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">How It Works<br></a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
+                <li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-4" href="page8.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>About&nbsp;</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="false"></a><a class="text-warning dropdown-item display-4" href="page1.html" aria-expanded="false">Change or be changed<br></a><a class="text-warning dropdown-item display-4" href="page2.html" aria-expanded="false">Shared Values<br></a><a class="text-warning dropdown-item display-4" href="page8.html" aria-expanded="true">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
                 </li></ul>
             
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-s1B8HLFsT4 mbr-parallax-background" id="header2-1w">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="cid-s1B8HLFsT4 mbr-parallax-background" id="header2-1w">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5QF3MJ0+Z67oSqk8amZm030wsl2OU1fuv3h+Vp40kdHAI0DGQVVSWP1DtM0pxdR/npFZZeIa/+Wv28iigtgJ///sbRtjrfuQsag45TiagxWh8tBwimvL2mFXvj3+q+Qb">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pdt+B8LnZLsnDjyoPrE62z9iNekwHY2JTyTvMmBhu/pwmCy2y8SuxXIGtuWGfvxzKPLJZOGTHjle/Z0GTdX76DBV2OF21dAMENBN7ZN2MPnzAnYQTtppt6/ph7j/x9Hr">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
