--- a/ExampleScorecard.html
+++ b/ExampleScorecard.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-s5nayCX0iT" id="header16-4t">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-s5nayCX0iT" id="header16-4t">
 
     
 
