--- a/ExampleScorecard.html
+++ b/ExampleScorecard.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-s5nayCX0iT" id="header16-4t">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-s5nayCX0iT" id="header16-4t">
 
     
 
