--- a/PeoplesAssembly.html
+++ b/PeoplesAssembly.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-s5nhAiX8Js" id="header16-51">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header1 cid-s5nhAiX8Js" id="header16-51">
 
     
 
