create github pages

--- a/about-WhyR100.html
+++ b/about-WhyR100.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section article content1 cid-s7xrL5uVCV" id="content1-8">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section article content1 cid-s7xrL5uVCV" id="content1-8">
     
      
 
