--- a/about-information.html
+++ b/about-information.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article content1 cid-s7xtuJP8ga" id="content1-a">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-s7xtuJP8ga" id="content1-a">
     
      
 
@@ -64,7 +64,7 @@
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Frequently Asked Questions
 </strong></p><p>
-<span style="font-size: 1rem;">[Likely FAQs as follows, answers here currently:]&nbsp;</span></p><p>
+<span style="font-size: 1rem;">[Likely FAQs as follows, answers <a href="https://docs.google.com/document/d/1TpQiOqFnUkvk-JnMtjIpnKaOsjLVeVqKHvx6I3z71x4/edit?usp=sharing">here</a> currently:]&nbsp;</span></p><p>
 FAQ 1 - What is Responsible 100?</p><p><span style="font-size: 1rem;">FAQ 2 - Does Responsible 100 have a manifesto?&nbsp;</span></p><p>FAQ 3 - What is a Responsible 100 scorecard?
 </p><p>FAQ 4 - What are Responsible 100 roundtables? 
 </p><p>FAQ 5 - Which social, environmental and ethical issues are there currently scorecards for? 
