create github pages

--- a/about-information.html
+++ b/about-information.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-s7xtuJP8ga" id="content1-a">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-section article content1 cid-s7xtuJP8ga" id="content1-a">
     
      
 
@@ -76,16 +76,15 @@ FAQ 1 - What is Responsible 100?</p><p><span style="font-size: 1rem;">FAQ 2 - Do
 </p><p>FAQ 11 - What is a race to the top, and a race to the bottom?&nbsp;</p><p><br></p><p><strong>About Us
 </strong></p><p><span style="font-size: 1rem;">Responsible 100 is delivered by Profit Through Ethics Ltd an independent, for-profit, impact business based in London, UK.&nbsp;</span></p><p><br></p><p><strong>Our Team
 </strong></p><p><strong>Michael Solomon, Founder
- &amp; Director</strong><br></p><p>Michael devised the R100 concept and unique approach in 2012 having worked on various forerunning initiatives prior. He has 17 years of experience in innovation and entrepreneurship in responsible business. View Michael’s profile on LinkedIn.
-</p><p><strong>Malcolm Bacchus, Adviser &amp; Virtual Finance Director
-</strong></p><p>Malcolm is a Chartered Accountant, a company director, an ICAEW Council Member, and an adviser to SMEs on financing, budgeting, strategy and general management issues. View Malcolm’s profile on LinkedIn.
+ &amp; Director</strong><br></p><p>Michael devised the R100 concept and unique approach in 2012 having worked on various forerunning initiatives prior. He has 17 years of experience in innovation and entrepreneurship in responsible business. View <a href="http://www.linkedin.com/pub/michael-solomon/9/537/443">Michael’s profile on LinkedIn</a>.
 </p><p><strong>Sophia Denham, Digital Product &amp; Operations Lead 
-</strong></p><p>Sophia is an experienced Product Manager with Scrum Product Owner certification. Her passion is in leveraging technology to optimise business processes. She is driving the automation of R100’s manual central business operations into a scaleable digital product. View Sophia’s profile on LinkedIn.
-</p><p><strong>Andrea Simonetti, Lead Developer
-</strong></p><p>Andrea is a devops manager with 10 years experience in commercial applications of data science and technology. He is an ad industry specialist focusing on ad targeting and campaigns performance. View Andrea’s profile on LinkedIn.
+</strong></p><p>
+<span style="font-size: 1rem;">Sophia is an experienced Product Manager with Scrum Product Owner certification. Her passion is in leveraging technology to optimise business processes. She is driving the automation of R100’s manual central business operations into a scaleable digital product. View <a href="https://www.linkedin.com/in/sophia-e-denham/">Sophia’s profile on LinkedIn</a>.&nbsp;</span></p><p><strong>Malcolm Bacchus, Adviser &amp; Virtual Finance Director
+</strong></p><p>Malcolm is a Chartered Accountant, a company director, an ICAEW Council Member, and an adviser to SMEs on financing, budgeting, strategy and general management issues. View <a href="https://www.linkedin.com/in/malcolm-bacchus-272b5113/">Malcolm’s profile on LinkedIn</a>.
+</p><p><strong>Andrea Simonetti, Lead Developer&nbsp;</strong><br></p><p>Andrea is a devops manager with 10 years experience in commercial applications of data science and technology. He is an ad industry specialist focusing on ad targeting and campaigns performance. View <a href="https://www.linkedin.com/in/andrea-simonetti-16a5a835/">Andrea’s profile on LinkedIn</a>.
 </p><p>&nbsp;
 </p><p><strong>What people have said...	
-</strong></p><p>[TBC]</p><p>
+</strong></p><p>[Quotes and testimonials TBC]</p><p>
 </p></div>
         </div>
     </div>
