create github pages

--- a/benchmarks-about.html
+++ b/benchmarks-about.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-s7xGobcnRf" id="content1-j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section article content1 cid-s7xGobcnRf" id="content1-j">
     
      
 
@@ -75,7 +75,7 @@
 [table]</p><p><br></p><p><strong>
 <span style="font-size: 1rem;">Scorecard Development&nbsp;</span></strong></p><p><span style="font-size: 1rem;">Scorecards are developed and improved as part of an on-going, collaborative and defined process:&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>Identification </strong>- Some issues burst onto our collective consciousness in a flash. Climate activism such as striking and Black Lives Matter provide two recent examples. Anyone can propose exploring new issues.&nbsp;</span><br></p><p><span style="font-size: 1rem;"><strong>Research </strong>- Typically, Responsible 100 will research any proposed new issue initially to assess if and how its inclusion may provide additional value and to minimise any potential overlap with other related issues (and their associated scorecards) that we already explore.&nbsp;</span><br></p><p>
 <span style="font-size: 1rem;"><strong>Partnership </strong>- Proposed new issues and early drafts of new scorecards are shared with the people’s assembly and experts in the field (e.g. academics, business leaders and practitioners, NGOs, thank tanks). These are invaluable ways of gaining wider input and refining draft scorecards. &nbsp;</span></p><p><span style="font-size: 1rem;"><strong>Testing in the real world</strong> - New scorecards are tested with businesses keen to benchmark against the new issue as soon as possible. Businesses assessing against new scorecards are encouraged to provide feedback to identify anything that is not working, or is missing, or any additional aspects.&nbsp;</span><br></p><p><span style="font-size: 1rem;">Steps 2-4 are iterated. And new scorecard/issue proposals are received all the time. &nbsp;</span><br></p><p>
-</p><p><span style="font-size: 1rem;"><strong>Example Scorecard &nbsp;</strong></span><br></p><p>[<span style="font-size: 1rem;">See here:&nbsp;</span><span style="font-size: 1rem;">http://www.profitthroughethics.com/questions/environment/transition-to-low-carbon-economy/#scorecard]</span></p></div>
+</p><p><br></p><p><span style="font-size: 1rem;"><strong>Example Scorecard &nbsp;</strong></span><br></p><p>[<span style="font-size: 1rem;">See here:&nbsp;</span><span style="font-size: 1rem;">http://www.profitthroughethics.com/questions/environment/transition-to-low-carbon-economy/#scorecard]</span></p></div>
         </div>
     </div>
 </section>
