--- a/services-SMEs.html
+++ b/services-SMEs.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section article content1 cid-s7xDWhxk07" id="content1-g">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section article content1 cid-s7xDWhxk07" id="content1-g">
     
      
 
@@ -75,7 +75,7 @@
 </p><p><strong><br></strong></p><p><strong>SMEs: How it works	
 </strong></p><p>
 <span style="font-size: 1rem;">Responsible 100 supports SMEs through several valuable processes.&nbsp;</span></p><p><span style="font-size: 1rem;">Entry points differ business to business. Some wish to include their stakeholders, and employees in particular, in these various steps. For other SMEs, this may not be desirable or appropriate.&nbsp;</span><br></p><p>[image]
-</p><p><strong><br></strong></p><p><strong>Fees&nbsp;</strong></p><p>[Fee info TBC]</p><p><strong><br></strong></p></div>
+</p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Fees&nbsp;</strong></p><p>[Fee info TBC]</p><p><strong><br></strong></p></div>
         </div>
     </div>
 </section>
