create github pages

--- a/benchmarks-about.html
+++ b/benchmarks-about.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section article content1 cid-s7xGobcnRf" id="content1-j">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-section article content1 cid-s7xGobcnRf" id="content1-j">
     
      
 
