--- a/about-mission.html
+++ b/about-mission.html
@@ -10,7 +10,7 @@
   <meta name="description" content="To describe R100's overall mission">
   
   
-  <title>About-Mission</title>
+  <title>Mission</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section article content1 cid-s7xk2W4d6W" id="content1-6">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section article content1 cid-s7xk2W4d6W" id="content1-6">
     
      
 
