create github pages

--- a/about-WhyR100.html
+++ b/about-WhyR100.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="mbr-section article content1 cid-s7xrL5uVCV" id="content1-8">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section article content1 cid-s7xrL5uVCV" id="content1-8">
     
      
 
